--- a/WeaponModel/App.config
+++ b/WeaponModel/App.config
@@ -14,4 +14,10 @@
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
         </providers>
     </entityFramework>
+
+ <connectionStrings>
+    <add name="WeaponDb"
+      connectionString="data source=DANIEL-LAPTOP\SQLEXPRESS;initial catalog=WeaponDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
